--- a/package.json
+++ b/package.json
@@ -1,13 +1,28 @@
 {
   "name": "twitchappapi",
-  "version": "0.0.1",
+  "version": "1.0",
   "description": "Twitch App API https://twitchappapi.docs.apiary.io",
+  "repository": "https://github.com/supertransformer/TwitchAppAPIWrapper",
   "main": "index.js",
   "scripts": 
   {
-    "test": "node tests.js"
+   
   },
-  "author": "_Souper_",
+  "keywords": [
+    "twitch",
+    "twitchapp",
+    "twitchappapi",
+    "twitchapi",
+    "wrapper",
+    "library",
+    "curseforge",
+    "forge",
+    "curse",
+    "minecraft",
+    "moddedminecraft",
+    "minecraftmods"
+  ],
+  "author": "Souper",
   "license": "GPL-3.0",
   "dependencies": 
   {
