--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "twitchappapi",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Twitch App API https://twitchappapi.docs.apiary.io",
   "repository": "https://github.com/supertransformer/TwitchAppAPIWrapper",
   "main": "index.js",
-  "scripts": 
-  {
-   
-  },
+  "scripts": {},
   "keywords": [
     "twitch",
     "twitchapp",
@@ -24,8 +21,7 @@
   ],
   "author": "Souper",
   "license": "GPL-3.0",
-  "dependencies": 
-  {
-    "node-fetch": "^2.6.0"
+  "dependencies": {
+    "node-fetch-retry": "^1.0.1"
   }
 }
