--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Twitch App API https://twitchappapi.docs.apiary.io",
   "repository": "https://github.com/supertransformer/TwitchAppAPIWrapper",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {},
   "keywords": [
     "twitch",
